--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 amazon.dynamodb.endpoint=
-amazon.aws.accesskey=${AKID}
-amazon.aws.secretkey=${SKID}
+AMAZON.AWS.ACCESSKEY=${AKID}
+AMAZON.AWS.SECRETKEY=${SKID}
 server.port=5000
