--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 amazon.dynamodb.endpoint=
-AMAZON.AWS.ACCESSKEY=${AKID}
-AMAZON.AWS.SECRETKEY=${SKID}
+amazon.s3.endpoint=
+amazon.aws.accesskey=${ACCESS_KEY}
+amazon.aws.secretkey=${SECRET_KEY}
+amazon.aws.bucket=
 server.port=5000
