updated env vars

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 amazon.dynamodb.endpoint=
-amazon.s3.endpoint=
+amazon.s3.endpoint=${S3_ENDPOINT}
 amazon.aws.accesskey=${ACCESS_KEY}
 amazon.aws.secretkey=${SECRET_KEY}
-amazon.aws.bucket=
+amazon.aws.bucket=${S3_BUCKET}
 server.port=5000
